--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier-plugin-astro": "^0.5.0"
   },
   "dependencies": {
-    "cypress": "^10.0.3"
+    "@astrojs/tailwind": "^2.0.1",
+    "cypress": "^10.0.3",
+    "tailwindcss": "^3.1.8"
   }
 }
