--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "lint:eslint": "eslint \"src/**/*.{css,js}\""
   },
   "devDependencies": {
-    "astro": "^1.0.0",
+    "astro": "^2.8.3",
     "eslint": "^8.18.0",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.11.0"
   },
   "dependencies": {
-    "@astrojs/image": "^0.11.4",
-    "@astrojs/mdx": "^0.11.6",
-    "@astrojs/tailwind": "^2.0.1",
+    "@astrojs/tailwind": "^4.0.0",
     "@types/marked": "^5.0.1",
     "marked": "^5.1.1",
+    "netlify-cli": "^15.9.0",
     "sharp": "^0.31.2",
     "tailwindcss": "^3.1.8"
   }
